<resources>
    <string name="app_name">calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiplication">*</string>
    <string name="_division">/</string>
    <string name="_point">.</string>
    <string name="_count">=</string>
    <string name="blue_theme">Blue theme</string>
    <string name="red_theme">Red theme</string>
    <string name="green_theme">Green theme</string>
    <string name="ok_button">OK</string>
</resources>